Work with GWTP 1.1